fix: markdown styling and title styling

--- a/packages/datagovmy-ui/src/styles/markdown.css
+++ b/packages/datagovmy-ui/src/styles/markdown.css
@@ -30,3 +30,7 @@
 .markdown a {
   @apply text-primary dark:text-primary-dark [text-underline-position:from-font] hover:underline;
 }
+
+.tooltip-list ul {
+  @apply list-inside list-disc space-y-0.5;
+}
