fix: banner markdown

--- a/packages/datagovmy-ui/src/styles/markdown.css
+++ b/packages/datagovmy-ui/src/styles/markdown.css
@@ -36,7 +36,7 @@
 }
 
 .banner-markdown a {
-  @apply underline;
+  @apply underline [text-underline-position:from-font];
 }
 .banner-markdown p {
   @apply text-sm;
